<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical"
        android:background="#CCB6B5">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aplikasi_hitung_ipk"
            android:textSize="40dp"
            android:gravity="center"
            android:textColor="#F44336"
            android:layout_marginTop="10dp"
            >

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/sarjana"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

        </androidx.appcompat.widget.AppCompatImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:background="#03A9F4">


        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:layout_marginLeft="10dp"
            android:id="@+id/id_nama"
            android:inputType="text">

        </androidx.appcompat.widget.AppCompatEditText>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nilai_java"
            android:layout_marginLeft="10dp"
            android:id="@+id/id_nilai_java"
            android:inputType="numberDecimal">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nilai_php"
            android:layout_marginLeft="10dp"
            android:id="@+id/id_nilai_php"
            android:inputType="numberDecimal">

        </androidx.appcompat.widget.AppCompatEditText>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/api"
            android:layout_marginLeft="10dp"
            android:id="@+id/id_nilai_api"
            android:inputType="numberDecimal">

        </androidx.appcompat.widget.AppCompatEditText>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/bersih"
                android:background="@drawable/custom_button"
                android:layout_marginRight="20dp"
                android:id="@+id/id_button_bersih">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/hitung"
                android:background="@drawable/custom_button_hitung"
                android:id="@+id/id_button_hitung">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>




    </LinearLayout>




</LinearLayout>